fixing touch select on mobile

--- a/docs/static/styles.css
+++ b/docs/static/styles.css
@@ -56,8 +56,11 @@ body{
 
 .pavelimage {
     width: 60%;
-    -moz-user-select: none;
-    -webkit-user-select: none;
+    user-select: none; /* Disable text selection */
+    -webkit-user-drag: none; /* Prevent dragging on Safari and Chrome */
+    -webkit-touch-callout: none; /* Disable long press on Safari */
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+
 }
 
 .pavelimage:hover {
